removing deprecations, new data version